Updated Board.java
added save/load (binary MSW1) seedable constructor