@@ -1,5 +1,6 @@
 package dev.bossiq.minesweeper.model;
 
+import java.io.*;
 import java.util.*;
 
 public final class Board {
@@ -7,12 +8,12 @@ public final class Board {
     public static final class RevealResult {
         public final boolean hitMine;
         public final List<Coord> revealed;
-
         public RevealResult(boolean hitMine, List<Coord> revealed) {
-            this.hitMine = hitMine;
-            this.revealed = revealed;
+            this.hitMine = hitMine; this.revealed = revealed;
         }
     }
+
+    private static final int SAVE_MAGIC = 0x4D535731;
 
     private final int width;
     private final int height;
@@ -28,27 +29,24 @@ public final class Board {
     private long endNanos = 0L;
 
     private final Random rng;
-
     private final boolean firstClickSafe;
     private boolean minesPlaced;
 
     public Board(int width, int height, int mineCount) {
         this(width, height, mineCount, new Random(), true);
     }
+    public Board(int width, int height, int mineCount, long seed) {
+        this(width, height, mineCount, new Random(seed), true);
+    }
     public Board(int width, int height, int mineCount, Random rng) {
         this(width, height, mineCount, rng, true);
     }
     public Board(int width, int height, int mineCount, Random rng, boolean firstClickSafe) {
         validateSizes(width, height, mineCount);
-        this.width = width;
-        this.height = height;
-        this.mineCount = mineCount;
-        this.rng = Objects.requireNonNull(rng, "rng");
-        this.firstClickSafe = firstClickSafe;
-
+        this.width = width; this.height = height; this.mineCount = mineCount;
+        this.rng = Objects.requireNonNull(rng); this.firstClickSafe = firstClickSafe;
         this.grid = new Cell[height][width];
         for (int y = 0; y < height; y++) for (int x = 0; x < width; x++) grid[y][x] = new Cell();
-
         if (!firstClickSafe) {
             placeMines(Collections.emptySet());
             computeAdjacencyCounts();
@@ -56,6 +54,14 @@ public final class Board {
         } else {
             minesPlaced = false;
         }
+    }
+
+    private Board(int width, int height, int mineCount, boolean firstClickSafe, boolean minesPlaced, Random rng, boolean skipInit) {
+        validateSizes(width, height, mineCount);
+        this.width = width; this.height = height; this.mineCount = mineCount;
+        this.firstClickSafe = firstClickSafe; this.minesPlaced = minesPlaced; this.rng = Objects.requireNonNull(rng);
+        this.grid = new Cell[height][width];
+        for (int y = 0; y < height; y++) for (int x = 0; x < width; x++) grid[y][x] = new Cell();
     }
 
     public int getWidth() { return width; }
@@ -66,11 +72,7 @@ public final class Board {
     public int getMoves() { return moves; }
     public int getFlagsUsed() { return flagsUsed; }
     public int getMinesRemaining() { return mineCount - flagsUsed; }
-
-    public Cell getCell(int x, int y) {
-        boundsCheck(x, y);
-        return grid[y][x];
-    }
+    public Cell getCell(int x, int y) { boundsCheck(x, y); return grid[y][x]; }
 
     private static void validateSizes(int width, int height, int mineCount) {
         if (width <= 0 || height <= 0) throw new IllegalArgumentException("width/height must be > 0");
@@ -78,60 +80,52 @@ public final class Board {
         if (mineCount <= 0 || mineCount >= cells) throw new IllegalArgumentException("mineCount must be between 1 and cells-1");
     }
 
-    private void placeMines(Set<Integer> excludeIndices) {
+    private void placeMines(Set<Integer> exclude) {
         int cells = width * height;
-        List<Integer> indices = new ArrayList<>(cells);
-        for (int i = 0; i < cells; i++) if (!excludeIndices.contains(i)) indices.add(i);
-        if (indices.size() < mineCount) throw new IllegalStateException("Not enough cells after exclusions");
-        Collections.shuffle(indices, rng);
+        List<Integer> idxs = new ArrayList<>(cells);
+        for (int i = 0; i < cells; i++) if (!exclude.contains(i)) idxs.add(i);
+        if (idxs.size() < mineCount) throw new IllegalStateException("Not enough cells after exclusions");
+        Collections.shuffle(idxs, rng);
         for (int i = 0; i < mineCount; i++) {
-            int idx = indices.get(i);
-            int x = idx % width, y = idx / width;
+            int idx = idxs.get(i), x = idx % width, y = idx / width;
             grid[y][x].setMine(true);
         }
     }
 
     private void computeAdjacencyCounts() {
-        for (int y = 0; y < height; y++) {
-            for (int x = 0; x < width; x++) {
-                if (grid[y][x].isMine()) { grid[y][x].setAdjacentMines(0); continue; }
-                int count = 0;
-                for (int dy = -1; dy <= 1; dy++) {
-                    for (int dx = -1; dx <= 1; dx++) {
-                        if (dx == 0 && dy == 0) continue;
-                        int nx = x + dx, ny = y + dy;
-                        if (inBounds(nx, ny) && grid[ny][nx].isMine()) count++;
-                    }
-                }
-                grid[y][x].setAdjacentMines(count);
+        for (int y = 0; y < height; y++) for (int x = 0; x < width; x++) {
+            if (grid[y][x].isMine()) { grid[y][x].setAdjacentMines(0); continue; }
+            int c = 0;
+            for (int dy = -1; dy <= 1; dy++) for (int dx = -1; dx <= 1; dx++) {
+                if (dx == 0 && dy == 0) continue;
+                int nx = x + dx, ny = y + dy;
+                if (inBounds(nx, ny) && grid[ny][nx].isMine()) c++;
             }
+            grid[y][x].setAdjacentMines(c);
         }
     }
 
     private void ensureMinesPlacedExcluding(int sx, int sy) {
         if (minesPlaced) return;
-        int safeIdx = sy * width + sx;
-        placeMines(Collections.singleton(safeIdx));
+        int safe = sy * width + sx;
+        placeMines(Collections.singleton(safe));
         computeAdjacencyCounts();
         minesPlaced = true;
     }
 
     public RevealResult reveal(int x, int y) {
         boundsCheck(x, y);
-        if (gameOver) return new RevealResult(false, Collections.emptyList());
+        if (gameOver) return new RevealResult(false, List.of());
         if (!minesPlaced && firstClickSafe) ensureMinesPlacedExcluding(x, y);
 
         Cell cell = grid[y][x];
-        if (cell.isRevealed() || cell.isFlagged()) return new RevealResult(false, Collections.emptyList());
+        if (cell.isRevealed() || cell.isFlagged()) return new RevealResult(false, List.of());
 
-        moves++;
-        ensureStarted();
+        moves++; ensureStarted();
 
         if (cell.isMine()) {
             cell.reveal();
-            gameOver = true;
-            won = false;
-            endNanos = System.nanoTime();
+            gameOver = true; won = false; endNanos = System.nanoTime();
             revealAllMines();
             return new RevealResult(true, List.of(new Coord(x, y)));
         }
@@ -145,30 +139,21 @@ public final class Board {
     public boolean toggleFlag(int x, int y) {
         boundsCheck(x, y);
         if (gameOver) return false;
-
         Cell c = grid[y][x];
         if (c.isRevealed()) return c.isFlagged();
-
-        moves++;
-        ensureStarted();
-
-        boolean wasFlagged = c.isFlagged();
+        moves++; ensureStarted();
+        boolean was = c.isFlagged();
         c.toggleFlag();
-        if (wasFlagged) flagsUsed--; else flagsUsed++;
+        if (was) flagsUsed--; else flagsUsed++;
         return c.isFlagged();
     }
 
     /** Clears ALL flags without counting as moves; returns how many flags were removed. */
     public int clearAllFlags() {
         int cleared = 0;
-        for (int y = 0; y < height; y++) {
-            for (int x = 0; x < width; x++) {
-                Cell c = grid[y][x];
-                if (c.isFlagged()) {
-                    c.toggleFlag();
-                    cleared++;
-                }
-            }
+        for (int y = 0; y < height; y++) for (int x = 0; x < width; x++) {
+            Cell c = grid[y][x];
+            if (c.isFlagged()) { c.toggleFlag(); cleared++; }
         }
         flagsUsed = 0;
         return cleared;
@@ -185,19 +170,15 @@ public final class Board {
             changed.add(cur);
             if (!cell.isMine()) revealedSafeCells++;
             if (cell.getAdjacentMines() == 0) {
-                for (int dy = -1; dy <= 1; dy++) {
-                    for (int dx = -1; dx <= 1; dx++) {
-                        if (dx == 0 && dy == 0) continue;
-                        int nx = cur.x() + dx, ny = cur.y() + dy;
-                        if (inBounds(nx, ny)) {
-                            Cell n = grid[ny][nx];
-                            if (!n.isRevealed() && !n.isFlagged() && !n.isMine()) {
-                                dq.addLast(new Coord(nx, ny));
-                            } else if (!n.isMine() && n.isHidden() && n.getAdjacentMines() > 0) {
-                                n.reveal();
-                                changed.add(new Coord(nx, ny));
-                                revealedSafeCells++;
-                            }
+                for (int dy = -1; dy <= 1; dy++) for (int dx = -1; dx <= 1; dx++) {
+                    if (dx == 0 && dy == 0) continue;
+                    int nx = cur.x() + dx, ny = cur.y() + dy;
+                    if (inBounds(nx, ny)) {
+                        Cell n = grid[ny][nx];
+                        if (!n.isRevealed() && !n.isFlagged() && !n.isMine()) {
+                            dq.addLast(new Coord(nx, ny));
+                        } else if (!n.isMine() && n.isHidden() && n.getAdjacentMines() > 0) {
+                            n.reveal(); changed.add(new Coord(nx, ny)); revealedSafeCells++;
                         }
                     }
                 }
@@ -206,32 +187,80 @@ public final class Board {
     }
 
     private void revealAllMines() {
-        for (int y = 0; y < height; y++)
-            for (int x = 0; x < width; x++)
-                if (grid[y][x].isMine() && !grid[y][x].isRevealed()) grid[y][x].reveal();
+        for (int y = 0; y < height; y++) for (int x = 0; x < width; x++) {
+            Cell c = grid[y][x]; if (c.isMine() && !c.isRevealed()) c.reveal();
+        }
     }
 
     private void checkWin() {
         int totalSafe = width * height - mineCount;
         if (revealedSafeCells == totalSafe) {
-            won = true;
-            gameOver = true;
-            endNanos = System.nanoTime();
+            won = true; gameOver = true; endNanos = System.nanoTime();
         }
     }
 
-    private void ensureStarted() {
-        if (startNanos == 0L) startNanos = System.nanoTime();
-    }
+    private void ensureStarted() { if (startNanos == 0L) startNanos = System.nanoTime(); }
 
     private boolean inBounds(int x, int y) { return x >= 0 && y >= 0 && x < width && y < height; }
     private void boundsCheck(int x, int y) { if (!inBounds(x, y)) throw new IndexOutOfBoundsException("Out of bounds: " + x + "," + y); }
 
     public GameStats snapshotStats() {
         long end = (endNanos == 0L ? System.nanoTime() : endNanos);
-        double seconds = (startNanos == 0L) ? 0.0 : (end - startNanos) / 1_000_000_000.0;
+        double sec = (startNanos == 0L) ? 0.0 : (end - startNanos) / 1_000_000_000.0;
         int totalSafe = width * height - mineCount;
-        return new GameStats(width, height, mineCount, totalSafe, revealedSafeCells,
-                flagsUsed, moves, isGameOver(), isWon(), seconds);
+        return new GameStats(width, height, mineCount, totalSafe, revealedSafeCells, flagsUsed, moves, gameOver, won, sec);
+    }
+
+    public void save(DataOutput out) throws IOException {
+        GameStats s = snapshotStats();
+        out.writeInt(SAVE_MAGIC);
+        out.writeInt(width); out.writeInt(height); out.writeInt(mineCount);
+        out.writeBoolean(firstClickSafe); out.writeBoolean(minesPlaced);
+        out.writeBoolean(gameOver); out.writeBoolean(won);
+        out.writeInt(revealedSafeCells); out.writeInt(flagsUsed); out.writeInt(moves);
+        out.writeDouble(s.elapsedSeconds());
+
+        for (int y = 0; y < height; y++) for (int x = 0; x < width; x++) {
+            Cell c = grid[y][x];
+            out.writeBoolean(c.isMine());
+            out.writeByte(c.getAdjacentMines());
+            byte st = (byte)(c.isRevealed() ? 1 : (c.isFlagged() ? 2 : 0));
+            out.writeByte(st);
+        }
+    }
+
+    public static Board load(DataInput in) throws IOException {
+        int magic = in.readInt();
+        if (magic != SAVE_MAGIC) throw new IOException("Not a Minesweeper save");
+        int w = in.readInt(), h = in.readInt(), m = in.readInt();
+        boolean firstSafe = in.readBoolean(), minesPlaced = in.readBoolean();
+        boolean gameOver = in.readBoolean(), won = in.readBoolean();
+        int revealedSafe = in.readInt(), flagsUsed = in.readInt(), moves = in.readInt();
+        double elapsedSec = in.readDouble();
+
+        Board b = new Board(w, h, m, firstSafe, minesPlaced, new Random(), true);
+        for (int y = 0; y < h; y++) for (int x = 0; x < w; x++) {
+            boolean mine = in.readBoolean();
+            int adj = in.readByte() & 0xFF;
+            int st = in.readByte() & 0xFF;
+            Cell c = b.grid[y][x];
+            c.setMine(mine);
+            c.setAdjacentMines(adj);
+            c.forceSetState(st == 1 ? CellState.REVEALED : (st == 2 ? CellState.FLAGGED : CellState.HIDDEN));
+        }
+
+        b.gameOver = gameOver; b.won = won;
+        b.revealedSafeCells = revealedSafe;
+        b.flagsUsed = flagsUsed;
+        b.moves = moves;
+        if (gameOver) {
+            long now = System.nanoTime();
+            b.startNanos = now - (long)(elapsedSec * 1_000_000_000L);
+            b.endNanos = now;
+        } else {
+            b.startNanos = System.nanoTime() - (long)(elapsedSec * 1_000_000_000L);
+            b.endNanos = 0L;
+        }
+        return b;
     }
 }
